--- a/style.css
+++ b/style.css
@@ -126,4 +126,5 @@ h1 {
     box-shadow: 0 2px 5px rgba(0,0,0,0.2);
     border-radius: 4px;
     z-index: 10;
+    /* width and height will be set by JavaScript */
 }
